<?xml version="1.0"?>
<package format="2">
    <name>smpl_purepursuit_local_planner</name>
    <version>1.0.1</version>
    <description>smpl_purepursuit_local_planner</description>
    <license>Apache 2.0</license>
    <author email="develop@smpl.com">Develop</author>
    <maintainer email="develop@smpl.com">Develop</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>smpl_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>base_local_planner</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>smpl_msgs</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>costmap_2d</exec_depend>
    <exec_depend>nav_core</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>base_local_planner</exec_depend>

    <export>
        <nav_core plugin="${prefix}/purepursuit_local_planner_plugin.xml"/>
    </export>
</package>
